--- a/src/components/NavBar/Navbar.styles.scss
+++ b/src/components/NavBar/Navbar.styles.scss
@@ -148,9 +148,7 @@
             color: $color-white;
 
             @media only screen and (max-width: $bp-medium-2) {
-                // top: .8rem;
-                // right: 1.1rem;
-                font-size: 1.3rem;
+                font-size: 1.1rem;
             }
         }
     }
