--- a/src/components/Shop-Highlight/ShopHighlight.styles.scss
+++ b/src/components/Shop-Highlight/ShopHighlight.styles.scss
@@ -57,5 +57,14 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
         grid-row-gap: 1.5rem;
+
+        @media only screen and (max-width: $bp-phone-small) {
+            padding: 1rem .5rem;
+            padding-left: 1.5rem;
+        }
+
+        @media only screen and (max-width: $bp-phone-smallest) {
+            grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        }
     }
 }
