--- a/src/pages/Homepage/Homepage.styles.scss
+++ b/src/pages/Homepage/Homepage.styles.scss
@@ -13,6 +13,13 @@
         grid-row-gap: 1.5rem;
     }
 
+    @media only screen and (max-width: $bp-phone-2) {
+        grid-template-columns: [full-start] minmax(.2rem, 1fr) [center-start ] minmax(min-content, 20rem) [main-start] 
+        minmax(min-content, 110rem) [main-end] 1fr [center-end] minmax(.2rem, 1fr) [full-end];
+        // grid-template-rows: min-content 40vh min-content min-content;
+        grid-row-gap: .5rem;
+    }
+
     &__nav {
         grid-column: 1 / -1;
     }
@@ -44,7 +51,7 @@
 
     &__market {
         @media only screen and (max-width: $bp-phone-2) {
-            grid-column: center-start / center-end;
+            grid-column: full-start / full-end;
         }
     }
 }
