--- a/src/sass/abstracts/_variable.scss
+++ b/src/sass/abstracts/_variable.scss
@@ -23,4 +23,6 @@ $bp-tab: 40.625em; //650px
 $bp-tab-2: 39.125em; //626px
 $bp-phone-1: 34.125em; //546px
 $bp-phone-2: 30.625em; //410px
+$bp-phone-small: 24.38em; //< 400px
+$bp-phone-smallest: 22.438em; //359px
 
